fix popper stick height problem, add scrollbar

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -167,11 +167,16 @@ html {
 
 
 #app .popper {
+  max-height: calc(
+    100vh - #{$header-height} - #{$calls-table-toolbar-height} -
+      #{$table-header-height} + 10px
+  );
   background-color: $popper-background-color;
   border-radius: 8px;
   border: none;
   box-shadow: 0 2px 24px 0 $popper-shadow-color;
   padding: 0px;
+  top: 10px !important;
 
   &[x-placement^='bottom'] {
     .popper__arrow {
