--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -72,6 +72,7 @@ $popper-shadow-color: rgba(0, 0, 0, 0.13);
 $popper-background-color: #fff;
 $popper-text-color: #4a4a4a;
 $popper-chechkbox-color: #398ffb;
+$popper-revert-to-default-border: 2px solid rgba(151, 151, 151, 0.1);
 
 $call-myself-view-background-color: rgba(34, 34, 34, 0.9);
 $call-myself-view-text-color: rgba(255, 255, 255, 0.4);
